--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "concat-files": "^0.1.1",
     "core-js": "^2.5.4",
     "d3": "^5.5.0",
+    "d3-color": "^1.2.0",
+    "d3-interpolate": "^1.2.0",
+    "d3-scale-chromatic": "^1.3.0",
+    "document-register-element": "^1.7.2",
     "gulp-concat": "^2.6.1",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "rxjs": "^6.0.0",
-    "zone.js": "^0.8.26",
-    "document-register-element": "^1.7.2"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
@@ -55,6 +58,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
+    "source-map-explorer": "^1.5.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
