--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.3.1",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
+    "preboot": "^6.0.0-beta.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
@@ -52,7 +53,7 @@
     "gulp": "^4.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.3",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
