--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "popper.js": "^1.14.3",
     "preboot": "^6.0.0-beta.4",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.2.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
