--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.5",
-    "@angular/cdk": "^6.2.1",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/elements": "^6.0.5",
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.3.3",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/elements": "^6.0.9",
     "@angular/flex-layout": "^6.0.0-beta.16",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/material": "^6.2.1",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/forms": "^6.0.9",
+    "@angular/http": "^6.0.9",
+    "@angular/material": "^6.3.3",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/platform-server": "^6.0.9",
+    "@angular/router": "^6.0.9",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "bootstrap": "^4.1.1",
     "concat-files": "^0.1.1",
     "core-js": "^2.5.4",
@@ -37,15 +40,16 @@
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "preboot": "^6.0.0-beta.4",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
+    "ts-loader": "^4.4.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/language-service": "^6.0.9",
     "@types/d3": "^5.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
