--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "document-register-element": "^1.7.2",
     "gulp-concat": "^2.6.1",
     "jquery": "^3.3.1",
+    "ng-material-multilevel-menu": "^4.0.1",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "preboot": "^6.0.0-beta.4",
