--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/router": "^6.1.4",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@types/date-fns": "^2.6.0",
+    "angular-calendar": "^0.25.2",
     "bootstrap": "^4.1.1",
     "concat-files": "^0.1.1",
     "core-js": "^2.5.4",
@@ -34,6 +36,7 @@
     "d3-color": "^1.2.0",
     "d3-interpolate": "^1.2.0",
     "d3-scale-chromatic": "^1.3.0",
+    "date-fns": "^1.29.0",
     "document-register-element": "^1.7.2",
     "gulp-concat": "^2.6.1",
     "jquery": "^3.3.1",
