--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-concat": "^2.6.1",
     "jquery": "^3.3.1",
     "ng-material-multilevel-menu": "^4.0.1",
+    "ngx-page-scroll": "^5.0.0",
     "node-sass": "^4.9.0",
     "popper.js": "^1.14.3",
     "preboot": "^6.0.0-beta.4",
